<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/questionHeader"
            android:text="@string/question1" />

        <EditText
            android:id="@+id/namePlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/name"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:maxLength="10"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/questionHeader"
            android:text="@string/question2"/>

        <RadioGroup
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <RadioButton
                android:id="@+id/q2a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/q2a1"/>

            <RadioButton
                android:id="@+id/q2a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/q2a2"/>

            <RadioButton
                android:id="@+id/q2a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/q2a3"/>

            <RadioButton
                android:id="@+id/q2a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/q2a4"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/questionHeader"
            android:text="@string/question3"/>

        <CheckBox
            android:id="@+id/alternative1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/q3a1"/>

        <CheckBox
            android:id="@+id/alternative2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/q3a2"/>

        <CheckBox
            android:id="@+id/alternative3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/q3a3"/>

        <CheckBox
            android:id="@+id/alternative4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/q3a4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/questionHeader"
            android:text="@string/question4"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="320dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:src="@drawable/chrome" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:src="@drawable/apple" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="8dp"
                android:src="@drawable/android"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_margin="8dp"
                android:src="@drawable/windows"/>

        </RelativeLayout>

        <RadioGroup
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <RadioButton
                android:id="@+id/q4a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/q4a1"/>

            <RadioButton
                android:id="@+id/q4a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/q4a2"/>

            <RadioButton
                android:id="@+id/q4a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/q4a3"/>

            <RadioButton
                android:id="@+id/q4a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/q4a4"/>

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="finalScore"
            android:text="@string/submitScore" />

    </LinearLayout>

</ScrollView>
